name:                syntax
version:             0.1.0.0
synopsis:            Abstract syntax descriptions for parsing and pretty-printing.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:Pawel834/syntax.git

library
  exposed-modules:     Data.Syntax
                       Data.Syntax.Char
  build-depends:       base, mono-traversable, lens, semi-iso
  default-language:    Haskell2010
